# sec-10q-rag

./: .gitignore  README.md  pyproject.toml
examples/: demo.py
src/sec10q_rag/: cli.py  config.py  parsing.py  rag.py  sec_client.py  storage.py
tests/: test_chunking.py
